js/js.translator/testData/incremental/invalidation/friendDependency/lib1/l1.0.kt
open class PublicClass {
    internal fun foo(): Int = 0
    internal konst bar: Int = 1
    open internal fun baz(): Int = 2
}
